[project]
name = "gpt-sovits"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "Faster_Whisper",
    "PyYAML",
    "ToJyutping",
    "attrdict",
    "chardet",
    "cn2an",
    "fast_langdetect>=0.3.0",
    "fastapi<0.112.2",
    "ffmpeg-python",
    "funasr==1.0.27",
    "g2p_en",
    "g2pk2",
    "gradio>=4.0, <=4.24.0",
    "jieba",
    "jieba_fast",
    "ko_pron",
    "librosa==0.9.2",
    "modelscope==1.10.0",
    "numba==0.56.4",
    "numpy==1.23.4",
    "onnxruntime ; sys_platform == 'darwin'",
    "onnxruntime-gpu ; sys_platform != 'darwin'",
    "opencc ; sys_platform != 'linux'",
    "peft",
    "psutil",
    "pyopenjtalk>=0.3.4",
    "pypinyin",
    "python_mecab_ko ; sys_platform != 'win32'",
    "pytorch-lightning",
    "rotary_embedding_torch",
    "scipy",
    "sentencepiece",
    "split-lang",
    "tensorboard",
    "torchaudio",
    "torchmetrics<=1.5",
    "tqdm",
    "transformers>=4.43",
    "wordsegment",
    "x_transformers",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gpt_sovits"]
